[gd_scene load_steps=4 format=3 uid="uid://d022fu33um405"]

[ext_resource type="Script" path="res://scenes/world/enemies_spawner.gd" id="1_v7546"]
[ext_resource type="PackedScene" uid="uid://dk7s1r5dnclxt" path="res://scenes/enemies/enemy.tscn" id="2_6y13b"]

[sub_resource type="Curve2D" id="Curve2D_0xr3n"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -69.1445, -110.814, 0, 0, 0, 0, 1253.86, -114.814, 0, 0, 0, 0, 1265.86, 678.186, 0, 0, 0, 0, -47.1445, 683.186, 0, 0, 0, 0, -69.1445, -110.814)
}
point_count = 5

[node name="enemies_spawner" type="Node"]
script = ExtResource("1_v7546")
enemy_1_scene = ExtResource("2_6y13b")

[node name="enemy_1_spawner_timer" type="Timer" parent="."]
wait_time = 0.05

[node name="start_delay" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="player_position" type="Marker2D" parent="."]
position = Vector2(573, 322)

[node name="enemy_path" type="Path2D" parent="player_position"]
position = Vector2(-604.855, -281.186)
curve = SubResource("Curve2D_0xr3n")

[node name="enemy_spawn_location" type="PathFollow2D" parent="player_position/enemy_path"]
position = Vector2(-69.1445, -110.814)
rotation = -0.00302342

[connection signal="timeout" from="enemy_1_spawner_timer" to="." method="_on_enemy_1_spawner_timer_timeout"]
[connection signal="timeout" from="start_delay" to="." method="_on_start_delay_timeout"]
